Fix T46913: Crash adding hook to linked mesh dupli

Follow up to T46738, we need to tag the object data for recalculation.