source/blender/makesrna/intern/rna_object.c
@@ -275,6 +275,9 @@ static void rna_Object_active_shape_update(Main *bmain, Scene *scene, PointerRNA
 			case OB_MESH:
 				EDBM_mesh_load(ob);
 				EDBM_mesh_make(scene->toolsettings, ob);
+
+				DAG_id_tag_update(ob->data, 0);
+
 				EDBM_mesh_normals_update(((Mesh *)ob->data)->edit_btmesh);
 				BKE_editmesh_tessface_calc(((Mesh *)ob->data)->edit_btmesh);
 				break;
